# boundary-first-flattening

./: .gitignore  CMakeLists.txt
command-line/: CommandLine.cpp
mesh/include/: Types.h
mesh/src/: Mesh.cpp  MeshIO.cpp
project/include/: Bff.h  BffInterface.h  Common.h
project/src/: Bff.cpp  BffInterface.cpp  BinPacking.cpp  ConePlacement.cpp  Distortion.cpp
